# Native-OS

./: Cargo.toml  README.md  x86_64-ai_os.json
.cargo/: config.toml
src/: interrupts.rs  main.rs  memory.rs  vga_buffer.rs
