[package]
name = "ai_os"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = { version = "=0.9.23", features = ["map_physical_memory"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.8"
x86_64 = "=0.14.10"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"